risc0/zirgen/dsl/test/repro/nonfinal_variadic_param.zir
// RUN: not zirgen %s 2>&1 | FileCheck %s

// CHECK: error: only the last parameter can be variadic
component NonfinalVariadic(x: Val..., y: Val) {}
